# minrl

./: main.py  pyproject.toml
enviornments/: __init__.py  tic-tac-toe.py  tic_tac_toe.py
examples/tic-tac-toe/: README.md  generate_sft_data.py  tic-tac-toe-vllm.py  train_grpo.py  train_sft.py
src/minrl/: algorithms.py  interaction.py  loggers.py  types.py
src/minrl/agents/: agent.py  llm_agent.py
src/minrl/envs/: env.py  singleagent.py
src/minrl/inference/: __init__.py  chat_template.py  client.py  parser.py
src/minrl/inference/hf/: __init__.py  hf_client.py
src/minrl/inference/vllm/: __init__.py  vllm_client.py
src/minrl/orchestrator/: __init__.py  orchestrator.py
src/minrl/trainers/: __init__.py  grpo.py  sft.py
tests/: test_interaction.py
