[project]
name = "minrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.1",
    "openai>=1.0",
    "transformers>=4.44",
]

[project.optional-dependencies]
examples = [
    "wandb>=0.17",
    "peft>=0.14",
]
